[package]
name = "vega-lite"
version = "0.0.2"
license = "BSD-3-Clause"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
readme = "README.md"
description = "Generated code for using the Vega-Lite schema from Rust."
keywords = ["vega", "charts", "graphs", "visualization"]
documentation = "https://docs.rs/vega-lite/"
homepage = "https://github.com/vizirs/vega-lite.rs"
repository = "https://github.com/vizirs/vega-lite.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
